# tracking

./: CMakeLists.txt  LICENSE  Makefile  README  advtracker.cpp  kcftracker  kcftracker.cpp  track.cpp
include/: thermaltracker.h
src/: advtracker.cpp  kcftracker.cpp  thermaltracker.cpp
